--- a/src/static/blog.css
+++ b/src/static/blog.css
@@ -95,15 +95,6 @@ body > header {
 }
 
 .icon {
-  opacity: 0.8;
-}
-
-.icon:hover {
-  opacity: 1;
-  transition: opacity 0.2s;
-}
-
-.icon {
   width: 2rem;
   height: 2rem;
 }
@@ -111,6 +102,8 @@ body > header {
 .small-icon {
   width: 1rem;
   height: 1rem;
+  position: relative;
+  top: .125rem;
 }
 
 .lead {
@@ -205,6 +198,7 @@ header.cover, header.cover .grey, header.cover a {
 .blue { color: blue; }
 .grey { color: grey; }
 
+
 @media (min-width: 640px) {
   .float-left { float: left; }
   .float-right { float: right; }
@@ -217,6 +211,12 @@ header.cover, header.cover .grey, header.cover a {
   clear: both;
 }
 
+
+.opacity-75 { opacity: 0.75; }
+.group:hover .opacity-75 {
+  opacity: 1;
+  transition: opacity 0.2s;
+}
 
 /* editor.js comments */
 
