--- a/src/static/highlight-github.css
+++ b/src/static/highlight-github.css
@@ -3,6 +3,9 @@
 github.com style (c) Vasily Polovnyov <vast@whiteants.net>
 
 */
+
+/* enabled when hljs loaded and makes code change appearance, so defined on pre in blog.css */
+/*
 .hljs {
   display: block;
   overflow-x: auto;
@@ -11,6 +14,8 @@ github.com style (c) Vasily Polovnyov <vast@whiteants.net>
   background: #fafafa;
   -webkit-text-size-adjust: none;
 }
+*/
+
 .hljs-comment,
 .hljs-template_comment,
 .diff .hljs-header,
