--- a/site.tmpl
+++ b/site.tmpl
@@ -31,7 +31,7 @@
   {{ if .Other.Img -}}
   <meta property="og:image" content="{{ .Site.Other.Url }}{{ .Other.Img }}">
   {{- else if matches "data-cover=" .Content -}}
-  <meta property="og:image" content="{{ .Site.Other.Url }}{{ refind "data-cover=\"(.*?)\"" .Content }}">
+  <meta property="og:image" content="{{ .Site.Other.Url }}{{ .Url }}{{ refind "data-cover=\"(.*?)\"" .Content }}">
   {{- else -}}
   <meta property="og:image" content="{{ .Site.Other.Url }}{{ version . "static/logo.png" | replace "../" "" }}">
   <meta property="og:image:width" content="490">
