--- a/site.tmpl
+++ b/site.tmpl
@@ -96,7 +96,7 @@
     content="{{ $cover }}"
     {{- end }}>
     <h1>
-      <span itemprop="name">{{- .Title -}}</span>
+      <span itemprop="name headline">{{- .Title -}}</span>
       {{- if .Other.Draft }} <span class="grey">(draft)</span>{{ end -}}
       <a href="/{{ .Url }}" class="self-target" itemprop="url">#</a>
     </h1>
