fix meta/og description

--- a/site.tmpl
+++ b/site.tmpl
@@ -13,11 +13,12 @@
 
   <title>{{ some .Title .Site.Other.Title }}</title>
   <meta name="author" content="{{ .Site.Other.Author }}">
-  <meta name="keywords" content="alexander solovyov, piranha, kasta, clojure, python, emacs, blog">
+  <meta name="keywords" content="alexander solovyov, piranha, kasta, clojure, python, emacs, blog
+    {{- if .Other.Keywords }}, {{ .Other.Keywords }}{{ end }}">
   <meta name="description" content="{{ if .Other.Description -}}
     {{ .Other.Description }}
   {{- else -}}
-    {{ with cut "<div id=\"content\">" "</div>" .Content }}{{ excerpt . 30 | strip_html }}{{ end }}
+    {{ with cut "<div id=\"post\".*?>" "</div>" .Content }}{{ excerpt . 30 | strip_html }}{{ end }}
   {{- end }}">
 
   <meta property="og:type" content="website">
@@ -26,7 +27,7 @@
   <meta property="og:description" content="{{ if .Other.Description -}}
     {{ .Other.Description }}
   {{- else -}}
-    {{ with cut "<div id=\"content\">" "</div>" .Content }}{{ excerpt . 30 | strip_html }}{{ end }}
+    {{ with cut "<div id=\"post\".*?>" "</div>" .Content }}{{ excerpt . 30 | strip_html }}{{ end }}
   {{- end }}">
   {{ if .Other.Img -}}
   <meta property="og:image" content="{{ .Site.Other.Url }}{{ .Other.Img }}">
