those newlines were bugging me

--- a/site.tmpl
+++ b/site.tmpl
@@ -18,7 +18,7 @@
   <meta name="description" content="{{ if .Other.Description -}}
     {{ .Other.Description }}
   {{- else -}}
-    {{ with cut "<div id=\"post\".*?>" "</div>" .Content }}{{ excerpt . 30 | strip_html }}{{ end }}
+    {{ with cut "<div id=\"post\".*?>" "</div>" .Content }}{{ excerpt . 30 | trim | strip_html }}{{ end }}
   {{- end }}">
 
   <meta property="og:type" content="website">
@@ -27,7 +27,7 @@
   <meta property="og:description" content="{{ if .Other.Description -}}
     {{ .Other.Description }}
   {{- else -}}
-    {{ with cut "<div id=\"post\".*?>" "</div>" .Content }}{{ excerpt . 30 | strip_html }}{{ end }}
+    {{ with cut "<div id=\"post\".*?>" "</div>" .Content }}{{ excerpt . 30 | trim | strip_html }}{{ end }}
   {{- end }}">
   {{ if .Other.Img -}}
   <meta property="og:image" content="{{ .Site.Other.Url }}{{ .Other.Img }}">
