fix weird space before comma

--- a/site.tmpl
+++ b/site.tmpl
@@ -120,14 +120,12 @@
     If you like what you read — subscribe to my
     <a href="https://twitter.com/asolovyov" class="group">
       <svg class="small-icon opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#twitter"/></svg>
-      Twitter
-    </a>,
+      Twitter</a>,
     I always post links to new posts there. Or, in case you're an old
     school person longing for an ancient technology, put a link to my
     <a href="https://solovyov.net/blog.atom" class="group">
       <svg class="small-icon opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#rss"/></svg>
-      RSS feed
-    </a>
+      RSS feed</a>
     in your feed reader (it's actually Atom feed, but who cares).
   </div>
 
