--- a/slides.tmpl
+++ b/slides.tmpl
@@ -112,6 +112,8 @@
     .invert, .orange, .green { color: white; }
     .invert h1, .orange h1, .green h1 { color: white; }
 
+    .red { color: red; }
+
     .em2 { font-size: 2em; }
     .em3 { font-size: 3em; }
 
