--- a/src/static/blog.css
+++ b/src/static/blog.css
@@ -173,7 +173,7 @@ header.cover > * {
 
 header.cover, header.cover .grey, header.cover a {
   color: white;
-  text-shadow: 1px 1px 2px black;
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
 }
 
 /* Utility */
