--- a/site.tmpl
+++ b/site.tmpl
@@ -50,18 +50,18 @@
 <body>
   <header>
     <h2 id="title"><a href="/">solovyov.net</a></h2>
-    <ul class="top-icons">
+    <ul class="top-icons nobullets">
       <li><a href="https://twitter.com/asolovyov" class="group" title="Twitter">
-        <svg class="icon opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#twitter"/></svg>
+        <svg class="icon2 opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#twitter"/></svg>
       </a></li>
       <li><a href="https://www.youtube.com/c/asolovyov" class="group" title="Youtube">
-        <svg class="icon opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#youtube"/></svg>
+        <svg class="icon2 opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#youtube"/></svg>
       </a></li>
       <li><a href="https://github.com/piranha" class="group" title="Github">
-        <svg class="icon opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#github"/></svg>
+        <svg class="icon2 opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#github"/></svg>
       </a></li>
       <li><a href="https://solovyov.net/blog.atom" class="group" title="RSS">
-        <svg class="icon opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#rss"/></svg>
+        <svg class="icon2 opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#rss"/></svg>
       </a></li>
     </ul>
   </header>
@@ -119,12 +119,12 @@
   <div>
     If you like what you read — subscribe to my
     <a href="https://twitter.com/asolovyov" class="group">
-      <svg class="small-icon opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#twitter"/></svg>
+      <svg class="icon opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#twitter"/></svg>
       Twitter</a>,
     I always post links to new posts there. Or, in case you're an old
     school person longing for an ancient technology, put a link to my
     <a href="https://solovyov.net/blog.atom" class="group">
-      <svg class="small-icon opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#rss"/></svg>
+      <svg class="icon opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#rss"/></svg>
       RSS feed</a>
     in your feed reader (it's actually Atom feed, but who cares).
   </div>
@@ -221,5 +221,5 @@ if (location.search.match(/\beditor=/)) {
 
 
 {{define "star"}}
-<svg title="Favorite post" class="small-icon" style="margin-top: 0.15em"><use xlink:href="{{ version . "static/icons.svg" }}#star"></svg>
+<svg title="Favorite post" class="icon" style="margin-top: 0.15em"><use xlink:href="{{ version . "static/icons.svg" }}#star"></svg>
 {{end}}
