--- a/src/static/blog.css
+++ b/src/static/blog.css
@@ -203,6 +203,7 @@ header.cover, header.cover .grey, header.cover a {
 .mt15 { margin-top: 1.5rem; }
 .mb { margin-bottom: 1rem; }
 .mb5 { margin-bottom: .5rem; }
+.mb2 { margin-bottom: 2rem; }
 .ml { margin-left: 1rem; }
 .mr { margin-right: 1rem; }
 
