add more visible link to telegram

--- a/site.tmpl
+++ b/site.tmpl
@@ -57,8 +57,8 @@
       <li><a href="https://www.youtube.com/c/asolovyov" class="group" title="Youtube">
         <svg class="icon2 opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#youtube"/></svg>
       </a></li>
-      <li><a href="https://github.com/piranha" class="group" title="Github">
-        <svg class="icon2 opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#github"/></svg>
+      <li><a href="https://t.me/bitethebyte" class="group" title="Telegram">
+        <svg class="icon2 opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#telegram"/></svg>
       </a></li>
       <li><a href="https://solovyov.net/blog.atom" class="group" title="RSS">
         <svg class="icon2 opacity-75"><use xlink:href="{{ version . "static/icons.svg" }}#rss"/></svg>
