--- a/site.tmpl
+++ b/site.tmpl
@@ -1,4 +1,4 @@
-{{/* -*- mode: go-template -*- */}}
+{{/* -*- mode: web; engine: go -*- */}}
 
 {{ define "header" }}<!doctype html>
 <html>
@@ -39,9 +39,6 @@
   <meta property="og:image:height" content="162">
   {{- end }}
 
-  <link rel="openid2.provider" href="https://openid.stackexchange.com/openid/provider">
-  <link rel="openid2.local_id" href="https://openid.stackexchange.com/user/76e7488b-6c80-4941-8f5a-0e4ba7c6b592">
-
   <link rel="stylesheet" type="text/css" href="{{ version . "static/blog.css" }}">
   <link rel="icon" href="{{ "static/favicon.png" | version (.Site.Pages.ByPath "index.html") | cut "^." "$" }}" type="image/png" />
   {{/* <script async src="{{ version . "static/stuff.js" }}"></script> */}}
@@ -71,7 +68,7 @@
 
 {{ define "footer" }}
   <footer class="text-center">
-    &#169; 2006&ndash;2020 <a href="{{ .Rel "/" }}">{{ .Site.Other.Author }}</a>.
+    &#169; 2006&ndash;2023 <a href="{{ .Rel "/" }}">{{ .Site.Other.Author }}</a>.
     {{ if eq .Url "" }}Icons made by <a href="https://www.flaticon.com/authors/pixel-perfect">Pixel perfect</a> from <a href="https://www.flaticon.com/">www.flaticon.com</a>.{{ end }}
   </footer>
 
