embrace the change

--- a/slides.tmpl
+++ b/slides.tmpl
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
 
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans|Oswald" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700|Oswald" rel="stylesheet">
   <script src="https://remarkjs.com/downloads/remark-0.15.0.min.js" type="text/javascript"></script>
   <link href="https://highlightjs.org/static/demo/styles/github.css"  rel="stylesheet">
   <style type="text/css">
@@ -36,6 +36,11 @@
 
     code { position: relative; text-align: left; }
     code .function {color: #900;}
+
+    blockquote {
+      border-left: .5rem solid lightgray;
+      padding-left: 1rem;
+    }
 
     a, a:visited {
       color: #00E;
